fix sorting annotations for index method
